Tried fixing spacing issues

--- a/css/styles.css
+++ b/css/styles.css
@@ -113,25 +113,30 @@ p {
 
 
 .login-box {
-  width: 80%;
+  display: flex;
+  width: 500px;
   height: 50%;
   margin: 20px;
   padding: 10%;
   background-color: rgb(160, 152, 152);
   border: 3px solid rgb(231, 2, 2);
-  /*justify-content: flex-start;*/
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
 
+/*Fix Me*/
 .typing-box {
-  height: 10%;
-  width: 50%;
+  display: flex;
+  height: 100px;
+  width: 200px;
   border: 2px solid black;
 }
 
 .button {
   display: flex;
-  height: 15%;
-  width: 25%;
+  height: 50px;
+  width: 100px;
   border-radius: 15px;
   border: 2px solid green;
   background-color: yellow;
